--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^11.0.0",
     "express": "^4.17.1",
+    "express-winston": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.1",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "winston": "^3.4.0"
   }
 }
